--- a/src/blocks/block-post-grid/styles/style.scss
+++ b/src/blocks/block-post-grid/styles/style.scss
@@ -122,7 +122,6 @@
 		line-height: 1.2;
 
 		a {
-			color: black;
 			text-decoration: none;
 
 			&:hover {
@@ -132,6 +131,24 @@
 		}
 	}
 
+	header h1.c9-block-post-grid-title {
+		font-size: 3.6rem;
+	}
+	header h2.c9-block-post-grid-title {
+		font-size: 2.8rem;
+	}
+	header h3.c9-block-post-grid-title {
+		font-size: 2rem;
+	}
+	header h4.c9-block-post-grid-title {
+		font-size: 1.8rem;
+	}
+	header h5.c9-block-post-grid-title {
+		font-size: 1.5rem;
+	}
+	header h6.c9-block-post-grid-title {
+		font-size: 1.2rem;
+	}
 	.c9-block-post-grid-byline {
 		font-size: 14px;
 		color: #999;
